--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
+    "motion": "^12.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
@@ -35,5 +36,4 @@
     "tailwindcss": "^3.4.15",
     "vite": "^5.4.10"
   }
-
 }
