--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,5 +42,20 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
-            tar -xzf /home/${{ secrets.SERVER_USER }}/frontend_deploy/dist.tgz -C /var/www/html
+            set -euo pipefail
+
+            DEPLOY_TGZ="/home/${{ secrets.SERVER_USER }}/frontend_deploy/dist.tgz"
+            WEBROOT="/var/www/html"
+            TMPDIR="/tmp/frontend_dist_$(date +%s)"
+
+            mkdir -p "$TMPDIR"
+            tar -xzf "$DEPLOY_TGZ" -C "$TMPDIR"
+
+            rm -rf "$WEBROOT"/*
+            cp -a "$TMPDIR"/. "$WEBROOT"/
+
+            sudo nginx -t
             sudo systemctl reload nginx
+
+            rm -rf "$TMPDIR"
+            rm -f "$DEPLOY_TGZ"
